app dia 3 de agosto

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -209,6 +209,7 @@ flutter:
     - assets/images/images_dos_topicos/voleibol_1.png
     - assets/images/images_dos_topicos/voleibol_2.png
     - assets/images/images_dos_topicos/voleibol_3.png
+    - assets/images/local_vermapa.png
 
 
 
