--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_map: ^7.0.2
   device_calendar: ^4.3.2
   timezone: ^0.9.4
+  flutter_local_notifications: ^17.2.2
 
 
 dev_dependencies:
