--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   firebase_core: ^2.27.2
   cloud_firestore: ^4.15.10
   provider: ^6.1.2
-  carousel_slider: ^4.0.0
+  carousel_slider: ^5.0.0
   sqflite: ^2.3.3
   path: ^1.9.0
   geolocator: ^11.0.0
@@ -44,6 +44,7 @@ dependencies:
   flutter_map: ^7.0.2
   device_calendar: ^4.3.2
   timezone: ^0.9.4
+  mailer: ^6.1.2
 
 
 dev_dependencies:
