--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   device_calendar: ^4.3.2
   timezone: ^0.9.4
   flutter_local_notifications: ^17.2.2
+  mailer: ^6.1.2
 
 
 dev_dependencies:
